--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<div class="card-white" id="introduction"> 
 				<h1>Hello, I'm Celia</h1>
-				<img src="images/profile.jpeg" class="img-circle" width="100px" alt="Celia Kressmann">
+				<img src="images/profile.png" class="img-circle" width="100px" alt="Celia Kressmann">
 				<p>
 				I love music, fashion, sport
 				</p>
